--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Elisha Mendez
-#logo:
+logo: /assets/img/professional photo.JPG
 #description:
 #show_downloads: true
 theme: jekyll-theme-minimal
