--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Elisha Mendez
-logo: assets/img/professional photo.JPG
+logo: assets/img/My Photo.png
 description:
 #show_downloads: true
 theme: jekyll-theme-minimal
