--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Elisha Mendez
-logo: assets/img/My_Photo.png
+logo: assets/img/My_Photo_2.png
 description:
 #show_downloads: true
 theme: jekyll-theme-minimal
