--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: Elisha Mendez
 logo: assets/img/My_Photo_2.png
-description: My portfolio reflects my commitment to leveraging data-driven insights for business optimization. With a background in pharmacy operations, workflow analysis, 
-and data visualization, I aim to further develop my expertise by pursuing a Master's in Business Analytics. My ultimate goal is to become a Business Analyst, 
-where I can apply analytical methodologies, process optimization strategies, and data visualization tools to drive informed decision-making and operational efficiency
+description: My portfolio reflects my commitment to leveraging data-driven insights for business optimization. With a background in pharmacy operations, workflow analysis, and data visualization, I aim to further develop my expertise by pursuing a Master's in Business Analytics. My ultimate goal is to become a Business Analyst, where I can apply analytical methodologies, process optimization strategies, and data visualization tools to drive informed decision-making and operational efficiency
 #show_downloads: true
 theme: jekyll-theme-minimal
